<resources>
    <string name="app_name">CRADLE-VSA-SMS-Relay</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>
    <string name="reuploadSwitchPrefKey">reuploadSwitchPrefKey</string>
    <string name="reuploadListPrefKey">reuploadListPrefKey</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Retry uploading failed referral periodically</string>
    <string name="reuploadtime">Try uploading every</string>
    <string name="accountSetting">Account Settings</string>
    <string name="signout">Sign out</string>
    <string name="stop_service">STOP SERVICE</string>
    <string name="start_service">START SERVICE</string>
    <string name="vsa_sms_relay">VSA-SMS-Relay</string>
    <string name="upload">Upload</string>
    <string name="referral_id">Referral ID: </string>
    <string name="cradle">CRADLE</string>
    <string name="data">Data</string>
    <string name="error">Error</string>
    <string name="progress">In Progress</string>
    <string name="login_error">Login error, check the credentials</string>
    <string name="log_in">Log In</string>
    <string name="email_hint">someone@example.com</string>
    <string name="password">Password:</string>
    <string name="success">Success</string>
    <string name="inProgressMessage">Referral is currently being sent to the server</string>
    <string name="sync_now">Sync Now</string>
    <string name="sync_now_key">syncNowKey</string>
    <string name="service_running_sync_toast">All the failed referrals are being uploaded</string>
    <string name="service_not_running_sync_toast">Referral service is not running, please start the service</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="no_referrals">There are no referrals to show</string>
    <string name="press_start_button">Press the start button</string>
    <string name="stop_service_status">The service is not running, press the START SERVICE button</string>
    <string name="start_service_status">The service is running, please DO NOT STOP it unless necessary</string>
    <string name="stop_service_dialog_title">Are you sure you want to STOP the service?</string>
    <string name="stop_service_dialog_body">This application will not be able to detect any text messages or uploaded them to the server</string>
    <string name="click_to_see_full_referral"><u>Click to see full referral</u></string>
    <string name="show_password">show password</string>
    <string name="hide_password">hide password</string>
    <string name="password_hint">*********</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email:</string>

    <!-- Service messages & responses -->
    <string name="awaiting_server_response">Awaiting server response…</string>
    <string name="receiving_from_server">Receiving data from server…</string>
    <string name="messages_received_forward_to_server">Received all messages. Forwarding to the server</string>
    <string name="uploading_to_server">Uploading data to server…</string>
    <string name="uploaded_to_server">Uploaded to server</string>
    <string name="received_from_server">Received from server</string>
    <string name="receiving_from_mobile">Receiving data from mobile…</string>
    <string name="receiving_mobile_messages">Receiving %1$d out of %2$d messages</string>
    <string name="received_from_mobile">Received from mobile</string>
    <string name="sending_to_mobile">Sending data to Mobile…</string>
    <string name="sending_messages_to_mobile">Sent %1$d out of %2$d messages</string>
    <string name="sent_to_mobile">Sent to Mobile</string>

    <string name="message_number">Message Number: %1$d</string>
    <string name="completed_4_messages">Completed. 4/4 Messages.</string>
    <string name="completed_in">Completed in %1$s</string>

    <!-- Network -->
    <string name="settings_default_server_hostname">cradleplatform.com</string>
    <string name="settings_default_server_port" />
    <string name="settings_default_server_use_https">true</string>
    <string name="key_server_hostname">settings_server_hostname</string>
    <string name="key_server_port">settings_server_port</string>
    <string name="key_server_use_https">settings_server_use_https</string>

    <!-- Errors -->
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="exception_impossible_branch">Impossible branch</string>
    <string name="the_server_encountered_an_error_the_response_will_be_relayed_back">The server encountered an error, the response will be relayed back</string>

    <string name="base_url">base_url</string>
    <string name="default_base_url">http://10.0.2.2:5000/</string>
    <string name="setting_btn">settings_btn</string>
    <string name="key_account_settings">account_settings</string>
    <string name="details">Details</string>
    <string name="message_number_000112">Message Number: 000112</string>
    <string name="default_group_title">Default Group Title</string>
    <string name="default_list_item">Default list item</string>
    <string name="settings">Settings</string>

    <!-- Biometric -->
    <string name="biometric_prompt_title">Unlock Cradle SMS Relay</string>
    <string name="key_biometric_enabled">biometric_unlock_enabled</string>
    <string name="biometric_settings_title">Biometric unlock</string>
    <string name="biometric_settings_summary">Require fingerprint, face, or PIN when opening the app</string>
    <string name="biometric_not_enrolled_title">No screen lock set up</string>
    <string name="biometric_not_enrolled_message">To enable biometric unlock, set up a fingerprint, face, or PIN in your device Settings first.</string>
    <string name="biometric_go_to_settings">Open Settings</string>
    <string name="biometric_unavailable">Biometric hardware is not available on this device.</string>

    <!-- Common Words -->
    <string name="capitalized_yes">YES</string>
    <string name="capitalized_no">NO</string>
    <string name="back">Back</string>

</resources>
